# axum-browser

./: Cargo.toml  build-release.sh  build.sh  index.html  readme.md
src/: lib.rs
