[package]
name = "axum-browser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.5.7", path = "../axum/axum", default-features = false  }
http = "0.2.7"
tower-service = "0.3.1"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
futures = "0.3.24"
http-body = "0.4.5"